Sharing user data through different pages

--- a/movies.html
+++ b/movies.html
@@ -7,8 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+
+    <h1>Hola <span class="userName">name</span></h1>
+
+
+
     <script type = "module" src="./build/movies.js"></script>
     <script type = "module" src="./build/series.js"></script>
-
+    <script type="module" src="./build/mediaUi/mediaUi.js"></script>
 </body>
 </html>
