Main and media principal design

--- a/movies.html
+++ b/movies.html
@@ -4,12 +4,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/mediaScreen.css">
+    <link rel="stylesheet" href="CSS/checkboxes.css">
+
     <title>Document</title>
 </head>
 <body>
+    <div class="nameBox"><span class="userName">name</span></div>
 
-    <h1>Hola <span class="userName">name</span></h1>
+    <aside>
+        <div class="typeButtons">
+            <button>Tipos</button>
+            <button class="diffButton">Actores</button>
+        </div>
+        <div class="checkbox-wrapper-24">
+            <input type="checkbox" id="check-24" name="check" value="" />
+            <label for="check-24">
+              <span></span>Drama
+            </label>
+            <input type="checkbox" id="check-25" name="check" value="" />
+            <label for="check-25">
+              <span></span>Accion
+            </label>
+            <input type="checkbox" id="check-26" name="check" value="" />
+            <label for="check-26">
+              <span></span>Animado
+            </label>
+            <input type="checkbox" id="check-27" name="check" value="" />
+            <label for="check-27">
+              <span></span>Terror
+            </label>
+            <input type="checkbox" id="check-28" name="check" value="" />
+            <label for="check-28">
+              <span></span>Romance
+            </label>
+            <input type="checkbox" id="check-29" name="check" value="" />
+            <label for="check-29">
+              <span></span>Ugu
+            </label>
+            <input type="checkbox" id="check-30" name="check" value="" />
+            <label for="check-30">
+              <span></span>Si
+            </label>    
+        </div>
+    </aside>
+    <main>
+        <div class="typeButtons">
+            <button>Movies</button>
+            <button class="diffButton">Series</button>
+        </div>
+        <div class = "media">
 
+        </div>
+      </main>
 
 
     <script type = "module" src="./build/movies.js"></script>
