Types in english

--- a/movies.html
+++ b/movies.html
@@ -24,27 +24,27 @@
             </label>
             <input type="checkbox" id="check-25" name="check" value="" />
             <label for="check-25">
-              <span></span>Accion
+              <span></span>Action
             </label>
             <input type="checkbox" id="check-26" name="check" value="" />
             <label for="check-26">
-              <span></span>Animado
+              <span></span>Animation
             </label>
             <input type="checkbox" id="check-27" name="check" value="" />
             <label for="check-27">
-              <span></span>Terror
+              <span></span>Comedy
             </label>
             <input type="checkbox" id="check-28" name="check" value="" />
             <label for="check-28">
-              <span></span>Romance
+              <span></span>Music
             </label>
             <input type="checkbox" id="check-29" name="check" value="" />
             <label for="check-29">
-              <span></span>Ugu
+              <span></span>Thriller
             </label>
             <input type="checkbox" id="check-30" name="check" value="" />
             <label for="check-30">
-              <span></span>Si
+              <span></span>Science Fiction
             </label>    
         </div>
     </aside>
