Getting data based on genres

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class = "container">
         <form class="form" data-form>
             <input type="text" placeholder="User..." data-input>
-            <button class="btn"><img src="/img/mas.png"></button>
+            <button class="btn"><img src="./img/mas.png"></button>
         </form>
         <div class="lists" data-lists>
             
