--- a/movies.html
+++ b/movies.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/mediaScreen.css">
-    <link rel="stylesheet" href="CSS/checkboxes.css">
-    <link rel="stylesheet" href="CSS/searcher.css">
+    <link rel="stylesheet" href="./CSS/mediaScreen.css">
+    <link rel="stylesheet" href="./CSS/checkboxes.css">
+    <link rel="stylesheet" href="./CSS/searcher.css">
 
     <title>Document</title>
 </head>
