Better searcher design, Filter movies by year

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="CSS/title.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tangerine">
 
-    <title>Oop page</title>
+    <title>PelisND</title>
 </head>
 <body>
     <div id="loader" class="loader">
