--- a/movies.html
+++ b/movies.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./CSS/checkboxes.css">
     <link rel="stylesheet" href="./CSS/searcher.css">
     <link rel="stylesheet" href="CSS/loader.css">
-
-    <title>Document</title>
+    <link rel="stylesheet" href="CSS/yearSearcher.css">
+    <title>PelisND</title>
 </head>
 <body>
     <div id="loader" class="loader">
@@ -34,12 +34,21 @@
         <div class="typeButtons">
             <button>Tipos</button>
             <button class="diffButton" id="searchButton">Actores</button>
-            <div id="searchContainer" style="display: none;">
-              <input type="text" id="searchInput" placeholder="Actor Name">
-              <button id="searchSubmit"><img src="./img/search.png"></button></button>
-            </div>
+            <button id="yearButton">Año</button>
         </div>
-        <div class="checkbox-wrapper-24">
+        <div class="typeButtons" id="searcherDiv">
+          <div id="searchContainer" style="display: none;">
+            <div>
+              <input type="text" id="searchInput" placeholder="Actor Name">
+              <button id="searchSubmit"><img src="./img/searcher.png"></button></button>
+            </div>
+          </div>
+          <div id="yearSearchContainer" style="display: none;">
+            <input type="text" id="yearSearchInput" placeholder="Release Data">
+            <button id="yearSearchSubmit"><img src="./img/searcher.png"></button></button>
+          </div>
+        </div>
+        <div id="allCheckboxes" class="checkbox-wrapper-24">
             <input type="checkbox" id="check-24" name="check" value=""  class ="genre-checkbox"/>
             <label for="check-24">
               <span></span>Drama
@@ -82,6 +91,8 @@
     </main>
     </div>
 
+
+    <script type="module" src="build/yearSearcher.js"></script>
     <script type="module" src="build/loginScreen.js"></script>
     <script type = "module" src="./build/checkboxes.js"></script>
     <script type = "module" src="./build/searcher.js"></script>
