--- a/movies.html
+++ b/movies.html
@@ -81,8 +81,8 @@
     </aside>
     <main>
         <div class="typeButtons">
-            <button>Movies</button>
-            <button class="diffButton">Series</button>
+          <button id="moviesButton">Movies</button>
+          <button id="seriesButton">Series</button>
             
         </div>
         <div class = "media">
