Favourite Media, perfect use

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="CSS/loader.css">
     <link rel="stylesheet" href="CSS/title.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tangerine">
-
+    <link rel="icon" href="img/logo.ico">
     <title>PelisND</title>
 </head>
 <body>
