--- a/movies.html
+++ b/movies.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./CSS/searcher.css">
     <link rel="stylesheet" href="CSS/loader.css">
     <link rel="stylesheet" href="CSS/yearSearcher.css">
+    <link rel="icon" href="img/logo.ico">
     <title>PelisND</title>
 </head>
 <body>
@@ -78,6 +79,13 @@
               <span></span>Science Fiction
             </label>    
         </div>
+        <div class="favourite-movies">
+          <span></span>Multimedia Favorita
+          <div id="likes-container">
+            
+
+          </div>
+        </div>
     </aside>
     <main>
         <div class="typeButtons">
@@ -88,6 +96,7 @@
         <div class = "media">
 
         </div>
+
     </main>
     </div>
 
